--- a/templates/extract_mp3.html
+++ b/templates/extract_mp3.html
@@ -72,7 +72,7 @@
             <a href="{{ url_for('index') }}" class="nav-logo">breeztube</a>
             <div class="nav-links">
                 <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('add_video') }}">Add Video</a>
+                <a href="{{ url_for('video.add_video') }}">Add Video</a>
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
                 <a href="{{ url_for('playlists') }}">Playlists</a>
                 <a href="{{ url_for('add_multiple_videos') }}">Add Multiple</a>
