--- a/templates/track_detail.html
+++ b/templates/track_detail.html
@@ -55,7 +55,7 @@
           <div class="dropdown">
             <button class="dropbtn">Upload</button>
             <div class="dropdown-content">
-              <a href="{{ url_for('add_video') }}">Add Video</a>
+              <a href="{{ url_for('video.add_video') }}">Add Video</a>
               <a href="{{ url_for('add_multiple_videos') }}">Add Multiple Videos</a>
               <a href="{{ url_for('bulk_upload') }}">Bulk Upload Videos</a>
               <a href="{{ url_for('add_track') }}">Add Track</a>
