--- a/templates/add_multiple.html
+++ b/templates/add_multiple.html
@@ -36,7 +36,7 @@
             <a href="{{ url_for('index') }}" class="nav-logo">Video Tagger</a>
             <div class="nav-links">
                 <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('add_video') }}">Add Video</a>
+                <a href="{{ url_for('video.add_video') }}">Add Video</a>
                 <a href="{{ url_for('add_multiple_videos') }}">Add Multiple</a>
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
             </div>
