--- a/templates/tag_detail.html
+++ b/templates/tag_detail.html
@@ -184,7 +184,7 @@
             <a href="{{ url_for('index') }}" class="nav-logo">breeztube</a>
             <div class="nav-links">
                 <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('add_video') }}">Add Video</a>
+                <a href="{{ url_for('video.add_video') }}">Add Video</a>
                 <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
                 <a href="{{ url_for('playlists') }}">Playlists</a>
                 <a href="{{ url_for('add_multiple_videos') }}">Add Multiple</a>
@@ -282,7 +282,7 @@
                         </div>
                         <div class="video-details">
                             <div class="video-title">
-                                <a href="{{ url_for('video_detail', video_id=video.id) }}">{{ video.nickname or video.original_filepath }}</a>
+                                <a href="{{ url_for('video.video_detail', video_id=video.id) }}">{{ video.nickname or video.original_filepath }}</a>
                             </div>
                             {% if video.description %}
                                 <p>{{ video.description }}</p>
