--- a/templates/video_detail.html
+++ b/templates/video_detail.html
@@ -8,17 +8,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <nav class="navbar">
-        <div class="nav-content">
-            <a href="{{ url_for('index') }}" class="nav-logo">Video Tagger</a>
-            <div class="nav-links">
-                <a href="{{ url_for('index') }}">Home</a>
-                <a href="{{ url_for('video.add_video') }}">Add Video</a>
-                <a href="{{ url_for('bulk_upload') }}">Bulk Upload</a>
-                <a href="{{ url_for('playlists') }}">Playlists</a>
-            </div>
-        </div>
-    </nav>
+    {% from 'navbar.html' import render_navbar %}
+    {{ render_navbar() }}
     <div class="container">
         <header>
             <h1>{{ video.nickname or video.original_filepath }}</h1>
